<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SDDL-User mobile node</string>
    
    <!-- Static Elements -->
    <string name="uuid">UUID:</string>
    <string name="ping">Ping!</string>
    <string name="computer">Computador</string>
    <string name="lamp">Lâmpada</string>
    <string name="tv">TV</string>
    <string name="event1">Evento 1</string>
    <string name="event2">Evento 2</string>
    <string name="startservice">Start Service!</string>
    <string name="stopservice">Stop Service!</string>
    <string name="ip">IP:</string>
    <string name="ip_hint">IP:PORTA (ex: 10.1.2.3:5500)</string>
    
    <!-- Dialog and Toast Messages -->
    <string name="msg_e_invalid_ip">"Invalid IP:PORT, please try again."</string>
    <string name="msg_d_valid_ip">"IP ok!"</string>
	<string name="msg_d_connected">Conectado!</string>
	<string name="msg_d_disconnected">Desconectado!</string>
	<string name="msg_d_reconnected">Reconectado!</string>
	<string name="msg_e_servicenotrunning">Communication Service is not running!</string>

</resources>
